# excel-formatting

./: LICENSE  README.md  example_usage.py  pyproject.toml
src/formats/: __init__.py
src/formats/borders/: __Init__.py  base.py  builtin.py  constants.py
src/formats/colors/: __int__.py  constants.py
src/formats/fonts/: base.py  builtin.py  constants.py
src/formats/styles/: base.py  builtin.py  constants.py
src/io/: excel_read.py  excel_write.py  openpyxl_adapter.py  repository.py
test/: test_openpyxl_adapter.py
