[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-formatting"
version = "0.1.0"
description = "Excel formatting utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ibrahimgh25" }
]
dependencies = [
    "openpyxl",
    "pandas",
    "pydantic",
    "pytest"
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
